[gd_scene load_steps=3 format=3 uid="uid://gsf4ctc5makr"]

[ext_resource type="Script" path="res://Puzzle/Puzzle.gd" id="1_01ibg"]
[ext_resource type="Script" path="res://Puzzle/PuzzleGrid.gd" id="2_we101"]

[node name="Puzzle" type="Node2D"]
script = ExtResource("1_01ibg")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1149.0
offset_bottom = 642.0
color = Color(0.105882, 0.321569, 0.286275, 1)

[node name="Category" type="Label" parent="."]
offset_left = 78.0
offset_top = 7.0
offset_right = 1073.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.996094, 0.996094, 0.996094, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="PuzzleGrid" type="VBoxContainer" parent="."]
offset_left = 38.0
offset_top = 160.0
offset_right = 1123.0
offset_bottom = 618.0
script = ExtResource("2_we101")

[node name="Line1Grid" type="HBoxContainer" parent="PuzzleGrid"]
layout_mode = 2
size_flags_vertical = 3

[node name="Line2Grid" type="HBoxContainer" parent="PuzzleGrid"]
layout_mode = 2
size_flags_vertical = 3

[node name="Line3Grid" type="HBoxContainer" parent="PuzzleGrid"]
layout_mode = 2
size_flags_vertical = 3

[node name="Line4Grid" type="HBoxContainer" parent="PuzzleGrid"]
layout_mode = 2
size_flags_vertical = 3

[node name="WrongGuessTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SolutionInput" type="Node2D" parent="."]

[node name="SolutionGuess" type="LineEdit" parent="SolutionInput"]
offset_left = 150.0
offset_top = 570.0
offset_right = 950.0
offset_bottom = 620.0
placeholder_text = "type solution here"
shortcut_keys_enabled = false

[node name="SolutionSubmit" type="Button" parent="SolutionInput"]
offset_left = 1000.0
offset_top = 570.0
offset_right = 1100.0
offset_bottom = 620.0
text = "Submit"

[connection signal="timeout" from="WrongGuessTimer" to="." method="_on_wrong_guess_timer_timeout"]
[connection signal="pressed" from="SolutionInput/SolutionSubmit" to="." method="_on_solution_submit_pressed"]
